@@ -14,3 +14,25 @@ dependencies {
     testImplementation("com.sun.activation:jakarta.activation:1.2.2")
   }
 }
+
+tasks {
+  val testStableSemconv by registering(Test::class) {
+    filter {
+      excludeTestsMatching("InstrumentedHttpClientTest")
+      excludeTestsMatching("RatpackRoutesTest")
+      excludeTestsMatching("RatpackServerApplicationTest")
+      excludeTestsMatching("RatpackServerTest")
+    }
+    jvmArgs("-Dotel.semconv-stability.opt-in=http")
+  }
+
+  withType<Test>().configureEach {
+    // required on jdk17
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+  }
+
+  check {
+    dependsOn(testStableSemconv)
+  }
+}
